[tool.poetry]
name = "moebius_transform_visualization"
version = "0.1.0"
description = ""
authors = ["hissanova <369bodhisattva@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.21.0"
matplotlib = "^3.4.2"
sympy = "^1.8"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
mypy = "^0.910"
yapf = "^0.31.0"
isort = "^5.9.1"
ipython = "^7.24.1"
jedi = "^0.17.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
